tests/macro-tests/cases/ui_node/delegate_expr_error_incorrect_mut.stderr
error[E0596]: cannot borrow data in a `&` reference as mutable
 --> cases/ui_node/delegate_expr_error_incorrect_mut.rs:5:22
  |
5 | #[ui_node(delegate = &self.inner)]
  |                      ^ `child` is a `&` reference, so the data it refers to cannot be borrowed as mutable
  |
help: consider changing this to be a mutable reference
  |
5 | #[ui_node(delegate = &mut self.inner)]
  |                       +++
